
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_1__ ;


typedef int mbedtls_mpi_uint ;
struct TYPE_7__ {int s; int n; int * p; } ;
typedef TYPE_1__ mbedtls_mpi ;


 int mbedtls_mpi_mul_mpi (TYPE_1__*,TYPE_1__ const*,TYPE_1__*) ;

int mbedtls_mpi_mul_int( mbedtls_mpi *X, const mbedtls_mpi *A, mbedtls_mpi_uint b )
{
    mbedtls_mpi _B;
    mbedtls_mpi_uint p[1];

    _B.s = 1;
    _B.n = 1;
    _B.p = p;
    p[0] = b;

    return( mbedtls_mpi_mul_mpi( X, A, &_B ) );
}
